@@ -1249,8 +1249,8 @@ If SEND-IF-FORCE, only send authinfo to the server if the
 	 (alist (netrc-machine list nntp-address "nntp"))
          (auth-info
           (nth 0 (auth-source-search :max 1
-                                     ;; TODO: allow the virtual server name too
-                                     :host nntp-address
+                                     :host (list nntp-address
+                                                 (nnoo-current-server 'nntp))
                                      :port '("119" "nntp"))))
          (auth-user (plist-get auth-info :user))
          (auth-force (plist-get auth-info :force))
